# komanawa-nz-depth-to-water

./: .gitignore  CITATION.bib  CITATION.cff  LICENSE  README.rst  pyproject.toml  python_env.txt
build_dataset/: convert_to_ncs.py
build_dataset/generate_dataset/: dummy_packages.py  project_base.py
build_dataset/generate_dataset/_original_get_data/: fc_GWL_requests_updated.py
build_dataset/generate_dataset/head_data_processing/: __init__.py  ashley_case_study_gwl_data.py  build_final_database.py  data_processing_functions.py  flag_mappers.py  get_clean_akl_data_generic.py  get_clean_amandine_data.py  get_clean_bop_generic.py  get_clean_ecan_gwl_data.py  get_clean_gisborne_data_generic.py  get_clean_hawkes_bay_data_generic.py  get_clean_horizons_data_generic.py  get_clean_marlborough_data_generic.py  get_clean_nelson_data_generic.py  get_clean_northland_data_generic.py  get_clean_orc_data_generic.py  get_clean_southland_data_generic.py  get_clean_taranaki_data_generic.py  get_clean_tasman_data_generic.py  get_clean_tauranga_cc_generic.py  get_clean_waikato_data_generic.py  get_clean_wellington_data_generic.py  get_clean_west_coast_data_generic.py  nzgd_data.py  pull_tethys_to_local_machine.py
build_dataset/update_technial_note/: data_stats.py  incorporate_data_to_repo.py  statistical_measures_of_dwt_data.py  update_tech_note.py
docs/: .buildinfo  genindex.html  index.html  last_updated.html  metadata.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/komanawa/nz_depth_to_water/: get_data.html  get_data_old.html
docs/_sources/: index.rst.txt  last_updated.rst.txt  metadata.rst.txt
docs/_sources/supporting_docs/: Technial_note.rst.txt  last_updated.rst.txt  supplmental_information.rst.txt
docs/_sources/tables/: Dataset_description.rst.txt  by_source_summary.rst.txt  full_dataset_summary.rst.txt  prob_less_0.1.rst.txt  prob_less_0.5.rst.txt  prob_less_1.rst.txt  stats_depth_cat_1.rst.txt  stats_depth_cat_2.rst.txt  stats_depth_cat_3.rst.txt
docs/autoapi/: index.html
docs/supporting_docs/: Technial_note.html  last_updated.html  limitations.html  supplmental_information.html
docs/tables/: Dataset_description.html  by_source_summary.html  data_provided_summary.html  full_dataset_summary.html  prob_less_0.1.html  prob_less_0.5.html  prob_less_1.html  stats_depth_cat_1.html  stats_depth_cat_2.html  stats_depth_cat_3.html
docs_build/: Dataset_description.rst  Technial_note.rst  conf.py  index.rst  last_updated.rst  metadata.rst
docs_build/supporting_docs/: README  Technial_note.rst  last_updated.rst  limitations.rst  options.sty  supplmental_information.rst
docs_build/tables/: by_source_summary.rst  data_provided_summary.rst  dtw_statisitcs.rst  full_dataset_summary.rst  prob_less_0.1.rst  prob_less_0.5.rst  prob_less_1.rst  stats_depth_cat_1.rst  stats_depth_cat_2.rst  stats_depth_cat_3.rst  summary_by_source.rst
src/komanawa/komanawa_nz_depth_to_water/: _data_stats.py  dummy_packages.py  hydrogeo_system.npz  project_base.py
src/komanawa/nz_depth_to_water/: __init__.py  density_grid.py  export_to_csv.py  get_data.py  get_data_old.py  version.py
tests/: metadata_spot_check.csv  test_komanawa_nz_depth_to_water.py  wl_data_spot_check.csv
(+80 files in other folders)
