[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.package-data]
"*" = ["*.hdf"]

[project]
name = "komanawa-nz-depth-to-water"
dynamic = ["version"] # version set in version.py
authors = [
    { name = "Matt Dumont", email = "Matt@komanawa.com" },
]
description = "Access to data for the NZ depth to water"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.3",
    "numpy==1.26.4",  # todo check with 2.0.0
    "netCDF4>=1.7.1",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Modified MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = { attr = "komanawa.nz_depth_to_water.version.__version__" }

[project.urls]
Homepage = "https://github.com/Komanawa-Solutions-Ltd/komanawa-nz-depth-to-water"
Issues = "https://github.com/Komanawa-Solutions-Ltd/komanawa-nz-depth-to-water/issues"
Documentation = "https://komanawa-solutions-ltd.github.io/komanawa-nz-depth-to-water/"